# ensemble-machine

./: .gitignore  LICENSE.txt  README.md  aws_config.ini  classroom.py  clion64.vmoptions  clone_kata.py  download_plugin.py  em.py  ide_config.json  install_erlang.sh  instances.py  login.sh  pyproject.toml  requirements.txt  shutdown.py  start_instances.py  summon.py  turn_off_machine.sh  update_dns.py  wrap_ec2_client.py
tests/: response.json  test_clone_kata.py  test_instances.py  test_summon.py  test_update_dns.py  test_wrap_ec2_client.py
tests/approved_files/: test_clone_kata.test_read_classroom_file.approved.txt  test_instances.test_instance_list_report.approved.txt  test_instances.test_print_instance.approved.txt  test_summon.test_create_instance.approved.txt  test_summon.test_create_several_instances.approved.txt  test_summon.test_generate_script.approved.txt  test_summon.test_write_classroom.approved.txt
